--- a/package.json
+++ b/package.json
@@ -2,5 +2,12 @@
   "name": "first-step-parcel",
   "version": "1.0.0",
   "main": "index.js",
-  "license": "MIT"
+  "license": "MIT",
+  "dependencies": {
+    "eslint": "^4.13.1",
+    "node-sass": "^4.7.2",
+    "parcel-bundler": "^1.2.1",
+    "stylelint": "^8.4.0",
+    "stylelint-config-standard": "^18.0.0"
+  }
 }
